# lib-riff

./: .travis.yml  CMakeLists.txt  README.md
include/: riff.h
src/: CMakeLists.txt  riff.c
test/: CMakeLists.txt  riff.cc
