####################################################################################################
## General
####################################################################################################
cmake_minimum_required (VERSION 2.8.11)
project (LibRiff)

####################################################################################################
## Sets
####################################################################################################
set (INCLUDE_DIR_SRC ${CMAKE_CURRENT_SOURCE_DIR}/include)

####################################################################################################
## Subdirectories
####################################################################################################
add_subdirectory (src)
