####################################################################################################
## Includes
####################################################################################################
include_directories (${INCLUDE_DIR_SRC})

####################################################################################################
## Build
####################################################################################################
add_library (filter_common SHARED
    riff.c
)
