####################################################################################################
## Includes
####################################################################################################
include_directories (${INCLUDE_DIR_SRC})

####################################################################################################
## Build
####################################################################################################
add_library (riff SHARED
    riff.c
)
