####################################################################################################
## Packages
####################################################################################################
find_package (GTest REQUIRED)
find_package (Threads REQUIRED)

####################################################################################################
## Build test
####################################################################################################
add_executable (test
    riff.cc
)
target_link_libraries (test
    ${GTEST_BOTH_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT}
)
