####################################################################################################
## Packages
####################################################################################################
find_package (GTest REQUIRED)
find_package (Threads REQUIRED)

####################################################################################################
## Includes
####################################################################################################
include_directories (${INCLUDE_DIR_SRC})

####################################################################################################
## Build test
####################################################################################################
add_executable (test
    riff.cc
)
target_link_libraries (test
    riff
    ${GTEST_BOTH_LIBRARIES}
    ${CMAKE_THREAD_LIBS_INIT}
)
